lib/resourcePolicyLangParser.js
// Generated from resourcePolicyLang.g4 by ANTLR 4.5.3
// jshint ignore: start
var antlr4 = require('antlr4/index');
var resourcePolicyLangListener = require('./resourcePolicyLangListener').resourcePolicyLangListener;
var grammarFileName = "resourcePolicyLang.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "':'", "','", "'in'", "'proceed to'", "'on'", 
                     "'and on'", "'end of'", "'date'", "'after contract creation'", 
                     "'price priceExpression'", "'transaction of'", "'to'", 
                     "'contract_guaranty of'", "'refund after'", "'day'", 
                     "'platform_guaranty of'", "'accepting license'", "'visit_increment of'", 
                     "'visit of'", "'account_balance greater than'", "'account_balance smaller than'", 
                     "'account_settled'", "'year'", "'week'", "'cycle'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, "FOR", 
                      "TERMINATE", "SELF", "PUBLIC", "GROUPUSER", "GROUPNODE", 
                      "NODES", "INTEGER_NUMBER", "FEATHERACCOUNT", "ID", 
                      "WS" ];

var ruleNames =  [ "policy", "segment", "audience_clause", "state_clause", 
                   "current_state_clause", "target_clause", "event", "and_event", 
                   "period_event", "specific_date_event", "relative_date_event", 
                   "pricing_agreement_event", "transaction_event", "guaranty_event", 
                   "contract_guaranty", "platform_guaranty", "signing_event", 
                   "access_count_event", "visit_increment_event", "visit_event", 
                   "balance_event", "balance_greater", "balance_smaller", 
                   "settlement_event", "license_resource_id", "users", "time_unit" ];

function resourcePolicyLangParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

resourcePolicyLangParser.prototype = Object.create(antlr4.Parser.prototype);
resourcePolicyLangParser.prototype.constructor = resourcePolicyLangParser;

Object.defineProperty(resourcePolicyLangParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

resourcePolicyLangParser.EOF = antlr4.Token.EOF;
resourcePolicyLangParser.T__0 = 1;
resourcePolicyLangParser.T__1 = 2;
resourcePolicyLangParser.T__2 = 3;
resourcePolicyLangParser.T__3 = 4;
resourcePolicyLangParser.T__4 = 5;
resourcePolicyLangParser.T__5 = 6;
resourcePolicyLangParser.T__6 = 7;
resourcePolicyLangParser.T__7 = 8;
resourcePolicyLangParser.T__8 = 9;
resourcePolicyLangParser.T__9 = 10;
resourcePolicyLangParser.T__10 = 11;
resourcePolicyLangParser.T__11 = 12;
resourcePolicyLangParser.T__12 = 13;
resourcePolicyLangParser.T__13 = 14;
resourcePolicyLangParser.T__14 = 15;
resourcePolicyLangParser.T__15 = 16;
resourcePolicyLangParser.T__16 = 17;
resourcePolicyLangParser.T__17 = 18;
resourcePolicyLangParser.T__18 = 19;
resourcePolicyLangParser.T__19 = 20;
resourcePolicyLangParser.T__20 = 21;
resourcePolicyLangParser.T__21 = 22;
resourcePolicyLangParser.T__22 = 23;
resourcePolicyLangParser.T__23 = 24;
resourcePolicyLangParser.T__24 = 25;
resourcePolicyLangParser.FOR = 26;
resourcePolicyLangParser.TERMINATE = 27;
resourcePolicyLangParser.SELF = 28;
resourcePolicyLangParser.PUBLIC = 29;
resourcePolicyLangParser.GROUPUSER = 30;
resourcePolicyLangParser.GROUPNODE = 31;
resourcePolicyLangParser.NODES = 32;
resourcePolicyLangParser.INTEGER_NUMBER = 33;
resourcePolicyLangParser.FEATHERACCOUNT = 34;
resourcePolicyLangParser.ID = 35;
resourcePolicyLangParser.WS = 36;

resourcePolicyLangParser.RULE_policy = 0;
resourcePolicyLangParser.RULE_segment = 1;
resourcePolicyLangParser.RULE_audience_clause = 2;
resourcePolicyLangParser.RULE_state_clause = 3;
resourcePolicyLangParser.RULE_current_state_clause = 4;
resourcePolicyLangParser.RULE_target_clause = 5;
resourcePolicyLangParser.RULE_event = 6;
resourcePolicyLangParser.RULE_and_event = 7;
resourcePolicyLangParser.RULE_period_event = 8;
resourcePolicyLangParser.RULE_specific_date_event = 9;
resourcePolicyLangParser.RULE_relative_date_event = 10;
resourcePolicyLangParser.RULE_pricing_agreement_event = 11;
resourcePolicyLangParser.RULE_transaction_event = 12;
resourcePolicyLangParser.RULE_guaranty_event = 13;
resourcePolicyLangParser.RULE_contract_guaranty = 14;
resourcePolicyLangParser.RULE_platform_guaranty = 15;
resourcePolicyLangParser.RULE_signing_event = 16;
resourcePolicyLangParser.RULE_access_count_event = 17;
resourcePolicyLangParser.RULE_visit_increment_event = 18;
resourcePolicyLangParser.RULE_visit_event = 19;
resourcePolicyLangParser.RULE_balance_event = 20;
resourcePolicyLangParser.RULE_balance_greater = 21;
resourcePolicyLangParser.RULE_balance_smaller = 22;
resourcePolicyLangParser.RULE_settlement_event = 23;
resourcePolicyLangParser.RULE_license_resource_id = 24;
resourcePolicyLangParser.RULE_users = 25;
resourcePolicyLangParser.RULE_time_unit = 26;

function PolicyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = resourcePolicyLangParser.RULE_policy;
    return this;
}

PolicyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PolicyContext.prototype.constructor = PolicyContext;

PolicyContext.prototype.EOF = function() {
    return this.getToken(resourcePolicyLangParser.EOF, 0);
};

PolicyContext.prototype.segment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SegmentContext);
    } else {
        return this.getTypedRuleContext(SegmentContext,i);
    }
};

PolicyContext.prototype.enterRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.enterPolicy(this);
	}
};

PolicyContext.prototype.exitRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.exitPolicy(this);
	}
};




resourcePolicyLangParser.PolicyContext = PolicyContext;

resourcePolicyLangParser.prototype.policy = function() {

    var localctx = new PolicyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, resourcePolicyLangParser.RULE_policy);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 57;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===resourcePolicyLangParser.FOR) {
            this.state = 54;
            this.segment();
            this.state = 59;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 60;
        this.match(resourcePolicyLangParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SegmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = resourcePolicyLangParser.RULE_segment;
    return this;
}

SegmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SegmentContext.prototype.constructor = SegmentContext;

SegmentContext.prototype.FOR = function() {
    return this.getToken(resourcePolicyLangParser.FOR, 0);
};

SegmentContext.prototype.audience_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Audience_clauseContext);
    } else {
        return this.getTypedRuleContext(Audience_clauseContext,i);
    }
};

SegmentContext.prototype.state_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(State_clauseContext);
    } else {
        return this.getTypedRuleContext(State_clauseContext,i);
    }
};

SegmentContext.prototype.enterRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.enterSegment(this);
	}
};

SegmentContext.prototype.exitRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.exitSegment(this);
	}
};




resourcePolicyLangParser.SegmentContext = SegmentContext;

resourcePolicyLangParser.prototype.segment = function() {

    var localctx = new SegmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, resourcePolicyLangParser.RULE_segment);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 62;
        this.match(resourcePolicyLangParser.FOR);
        this.state = 64; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 63;
            this.audience_clause(0);
            this.state = 66; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(((((_la - 28)) & ~0x1f) == 0 && ((1 << (_la - 28)) & ((1 << (resourcePolicyLangParser.SELF - 28)) | (1 << (resourcePolicyLangParser.PUBLIC - 28)) | (1 << (resourcePolicyLangParser.GROUPUSER - 28)) | (1 << (resourcePolicyLangParser.GROUPNODE - 28)) | (1 << (resourcePolicyLangParser.NODES - 28)) | (1 << (resourcePolicyLangParser.ID - 28)))) !== 0));
        this.state = 68;
        this.match(resourcePolicyLangParser.T__0);
        this.state = 72;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===resourcePolicyLangParser.T__2 || _la===resourcePolicyLangParser.TERMINATE) {
            this.state = 69;
            this.state_clause();
            this.state = 74;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Audience_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = resourcePolicyLangParser.RULE_audience_clause;
    return this;
}

Audience_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Audience_clauseContext.prototype.constructor = Audience_clauseContext;

Audience_clauseContext.prototype.users = function() {
    return this.getTypedRuleContext(UsersContext,0);
};

Audience_clauseContext.prototype.audience_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Audience_clauseContext);
    } else {
        return this.getTypedRuleContext(Audience_clauseContext,i);
    }
};

Audience_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.enterAudience_clause(this);
	}
};

Audience_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.exitAudience_clause(this);
	}
};



resourcePolicyLangParser.prototype.audience_clause = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new Audience_clauseContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 4;
    this.enterRecursionRule(localctx, 4, resourcePolicyLangParser.RULE_audience_clause, _p);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        this.users();
        this._ctx.stop = this._input.LT(-1);
        this.state = 83;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                localctx = new Audience_clauseContext(this, _parentctx, _parentState);
                this.pushNewRecursionContext(localctx, _startState, resourcePolicyLangParser.RULE_audience_clause);
                this.state = 78;
                if (!( this.precpred(this._ctx, 1))) {
                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                }
                this.state = 79;
                this.match(resourcePolicyLangParser.T__1);
                this.state = 80;
                this.audience_clause(2); 
            }
            this.state = 85;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};

function State_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = resourcePolicyLangParser.RULE_state_clause;
    return this;
}

State_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
State_clauseContext.prototype.constructor = State_clauseContext;

State_clauseContext.prototype.TERMINATE = function() {
    return this.getToken(resourcePolicyLangParser.TERMINATE, 0);
};

State_clauseContext.prototype.current_state_clause = function() {
    return this.getTypedRuleContext(Current_state_clauseContext,0);
};

State_clauseContext.prototype.target_clause = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Target_clauseContext);
    } else {
        return this.getTypedRuleContext(Target_clauseContext,i);
    }
};

State_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.enterState_clause(this);
	}
};

State_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.exitState_clause(this);
	}
};




resourcePolicyLangParser.State_clauseContext = State_clauseContext;

resourcePolicyLangParser.prototype.state_clause = function() {

    var localctx = new State_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, resourcePolicyLangParser.RULE_state_clause);
    try {
        this.state = 93;
        switch(this._input.LA(1)) {
        case resourcePolicyLangParser.TERMINATE:
            this.enterOuterAlt(localctx, 1);
            this.state = 86;
            this.match(resourcePolicyLangParser.TERMINATE);
            break;
        case resourcePolicyLangParser.T__2:
            this.enterOuterAlt(localctx, 2);
            this.state = 87;
            this.current_state_clause();
            this.state = 89; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 88;
            		this.target_clause();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 91; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,4, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Current_state_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = resourcePolicyLangParser.RULE_current_state_clause;
    return this;
}

Current_state_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Current_state_clauseContext.prototype.constructor = Current_state_clauseContext;

Current_state_clauseContext.prototype.ID = function() {
    return this.getToken(resourcePolicyLangParser.ID, 0);
};

Current_state_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.enterCurrent_state_clause(this);
	}
};

Current_state_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.exitCurrent_state_clause(this);
	}
};




resourcePolicyLangParser.Current_state_clauseContext = Current_state_clauseContext;

resourcePolicyLangParser.prototype.current_state_clause = function() {

    var localctx = new Current_state_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, resourcePolicyLangParser.RULE_current_state_clause);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        this.match(resourcePolicyLangParser.T__2);
        this.state = 96;
        this.match(resourcePolicyLangParser.ID);
        this.state = 97;
        this.match(resourcePolicyLangParser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Target_clauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = resourcePolicyLangParser.RULE_target_clause;
    return this;
}

Target_clauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Target_clauseContext.prototype.constructor = Target_clauseContext;

Target_clauseContext.prototype.ID = function() {
    return this.getToken(resourcePolicyLangParser.ID, 0);
};

Target_clauseContext.prototype.event = function() {
    return this.getTypedRuleContext(EventContext,0);
};

Target_clauseContext.prototype.and_event = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(And_eventContext);
    } else {
        return this.getTypedRuleContext(And_eventContext,i);
    }
};

Target_clauseContext.prototype.TERMINATE = function() {
    return this.getToken(resourcePolicyLangParser.TERMINATE, 0);
};

Target_clauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.enterTarget_clause(this);
	}
};

Target_clauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.exitTarget_clause(this);
	}
};




resourcePolicyLangParser.Target_clauseContext = Target_clauseContext;

resourcePolicyLangParser.prototype.target_clause = function() {

    var localctx = new Target_clauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, resourcePolicyLangParser.RULE_target_clause);
    var _la = 0; // Token type
    try {
        this.state = 110;
        switch(this._input.LA(1)) {
        case resourcePolicyLangParser.T__3:
            this.enterOuterAlt(localctx, 1);
            this.state = 99;
            this.match(resourcePolicyLangParser.T__3);
            this.state = 100;
            this.match(resourcePolicyLangParser.ID);
            this.state = 101;
            this.match(resourcePolicyLangParser.T__4);
            this.state = 102;
            this.event();
            this.state = 106;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===resourcePolicyLangParser.T__5) {
                this.state = 103;
                this.and_event();
                this.state = 108;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            break;
        case resourcePolicyLangParser.TERMINATE:
            this.enterOuterAlt(localctx, 2);
            this.state = 109;
            this.match(resourcePolicyLangParser.TERMINATE);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EventContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = resourcePolicyLangParser.RULE_event;
    return this;
}

EventContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EventContext.prototype.constructor = EventContext;

EventContext.prototype.period_event = function() {
    return this.getTypedRuleContext(Period_eventContext,0);
};

EventContext.prototype.specific_date_event = function() {
    return this.getTypedRuleContext(Specific_date_eventContext,0);
};

EventContext.prototype.relative_date_event = function() {
    return this.getTypedRuleContext(Relative_date_eventContext,0);
};

EventContext.prototype.pricing_agreement_event = function() {
    return this.getTypedRuleContext(Pricing_agreement_eventContext,0);
};

EventContext.prototype.transaction_event = function() {
    return this.getTypedRuleContext(Transaction_eventContext,0);
};

EventContext.prototype.guaranty_event = function() {
    return this.getTypedRuleContext(Guaranty_eventContext,0);
};

EventContext.prototype.signing_event = function() {
    return this.getTypedRuleContext(Signing_eventContext,0);
};

EventContext.prototype.access_count_event = function() {
    return this.getTypedRuleContext(Access_count_eventContext,0);
};

EventContext.prototype.balance_event = function() {
    return this.getTypedRuleContext(Balance_eventContext,0);
};

EventContext.prototype.settlement_event = function() {
    return this.getTypedRuleContext(Settlement_eventContext,0);
};

EventContext.prototype.enterRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.enterEvent(this);
	}
};

EventContext.prototype.exitRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.exitEvent(this);
	}
};




resourcePolicyLangParser.EventContext = EventContext;

resourcePolicyLangParser.prototype.event = function() {

    var localctx = new EventContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, resourcePolicyLangParser.RULE_event);
    try {
        this.state = 122;
        switch(this._input.LA(1)) {
        case resourcePolicyLangParser.T__6:
            this.enterOuterAlt(localctx, 1);
            this.state = 112;
            this.period_event();
            break;
        case resourcePolicyLangParser.T__7:
            this.enterOuterAlt(localctx, 2);
            this.state = 113;
            this.specific_date_event();
            break;
        case resourcePolicyLangParser.INTEGER_NUMBER:
            this.enterOuterAlt(localctx, 3);
            this.state = 114;
            this.relative_date_event();
            break;
        case resourcePolicyLangParser.T__9:
            this.enterOuterAlt(localctx, 4);
            this.state = 115;
            this.pricing_agreement_event();
            break;
        case resourcePolicyLangParser.T__10:
            this.enterOuterAlt(localctx, 5);
            this.state = 116;
            this.transaction_event();
            break;
        case resourcePolicyLangParser.T__12:
        case resourcePolicyLangParser.T__15:
            this.enterOuterAlt(localctx, 6);
            this.state = 117;
            this.guaranty_event();
            break;
        case resourcePolicyLangParser.T__16:
            this.enterOuterAlt(localctx, 7);
            this.state = 118;
            this.signing_event();
            break;
        case resourcePolicyLangParser.T__17:
        case resourcePolicyLangParser.T__18:
            this.enterOuterAlt(localctx, 8);
            this.state = 119;
            this.access_count_event();
            break;
        case resourcePolicyLangParser.T__19:
        case resourcePolicyLangParser.T__20:
            this.enterOuterAlt(localctx, 9);
            this.state = 120;
            this.balance_event();
            break;
        case resourcePolicyLangParser.T__21:
            this.enterOuterAlt(localctx, 10);
            this.state = 121;
            this.settlement_event();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function And_eventContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = resourcePolicyLangParser.RULE_and_event;
    return this;
}

And_eventContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
And_eventContext.prototype.constructor = And_eventContext;

And_eventContext.prototype.event = function() {
    return this.getTypedRuleContext(EventContext,0);
};

And_eventContext.prototype.enterRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.enterAnd_event(this);
	}
};

And_eventContext.prototype.exitRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.exitAnd_event(this);
	}
};




resourcePolicyLangParser.And_eventContext = And_eventContext;

resourcePolicyLangParser.prototype.and_event = function() {

    var localctx = new And_eventContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, resourcePolicyLangParser.RULE_and_event);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 124;
        this.match(resourcePolicyLangParser.T__5);
        this.state = 125;
        this.event();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Period_eventContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = resourcePolicyLangParser.RULE_period_event;
    return this;
}

Period_eventContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Period_eventContext.prototype.constructor = Period_eventContext;

Period_eventContext.prototype.time_unit = function() {
    return this.getTypedRuleContext(Time_unitContext,0);
};

Period_eventContext.prototype.enterRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.enterPeriod_event(this);
	}
};

Period_eventContext.prototype.exitRule = function(listener) {
    if(listener instanceof resourcePolicyLangListener ) {
        listener.exitPeriod_event(this);
	}
};




resourcePolicyLangParser.Period_eventContext = Period_eventContext;

resourcePolicyLangParser.prototype.period_event = function() {

    var localctx = new Period_eventContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, resourcePolicyLangParser.RULE_period_event);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 127;
        this.match(resourcePolicyLangParser.T__6);
        this.state = 128;
        this.time_unit();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Specific_date_eventContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = resourcePolicyLangParser.RULE_specific_date_event;
    return this;
}

Specific_date_eventContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Specific_date_eventContext.prototype.constructor = Specific_date_eventContext;

Specific_date_eventContext.prototype.ID = function() {
    return this.getToken(resourcePolicyLangParser.ID, 0);
};
